--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "homepage": "https://github.com/monkeyboiii/trading-bot#readme",
   "devDependencies": {
     "jest": "^29.6.0"
+  },
+  "dependencies": {
+    "@questdb/nodejs-client": "^1.0.4",
+    "axios": "^1.4.0",
+    "winston": "^3.10.0"
   }
 }
